dynamix/force-app/main/default/objects/Property__c/fields/RERA_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>RERA_Carpet_Area__c</fullName>
    <label>RERA Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>