dynamix/force-app/main/default/objects/Property__c/fields/RERA_Carpet_Area_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>RERA_Carpet_Area_in_sqmtr__c</fullName>
    <formula>RERA_Carpet_Area__c/10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA Carpet Area (in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>