dynamix/force-app/main/default/objects/Property__c/fields/RM_Customer_Task__c.field-meta.xml
<CustomField>
    <fullName>RM_Customer_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Customer Task</label>
    <type>Checkbox</type>
</CustomField>