dynamix/force-app/main/default/objects/Property__c/fields/Size_of_Parking__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Parking__c</fullName>
    <label>Size of Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>