dynamix/force-app/main/default/objects/Property__c/fields/Snag_Status__c.field-meta.xml
<CustomField>
    <fullName>Snag_Status__c</fullName>
    <label>Snag Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yet to start</fullName>
                <default>true</default>
                <label>Yet to start</label>
            </value>
            <value>
                <fullName>Internal Snagging</fullName>
            </value>
            <value>
                <fullName>Customer Unit Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>Customer Snagging</fullName>
            </value>
            <value>
                <fullName>Customer Unit Inspection Completed</fullName>
            </value>
            <value>
                <fullName>Handover completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>