dynamix/force-app/main/default/objects/Property__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Hold for booking</fullName>
            </value>
            <value>
                <fullName>Possession Given</fullName>
            </value>
            <value>
                <fullName>Refuge</fullName>
            </value>
            <value>
                <fullName>Partner Share</fullName>
            </value>
            <value>
                <fullName>Hold for Approval</fullName>
            </value>
            <value>
                <fullName>Unit Cancelled</fullName>
            </value>
            <value>
                <fullName>Unit Transferred</fullName>
            </value>
            <value>
                <fullName>Given on Rent</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>