dynamix/force-app/main/default/objects/Property__c/fields/Sub_Snag_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Snag_Status__c</fullName>
    <label>Sub Snag Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Snag_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Snag Initiated</fullName>
            </value>
            <value>
                <fullName>Pre OC-Submitted with snags</fullName>
            </value>
            <value>
                <fullName>Pre OC-Verified</fullName>
            </value>
            <value>
                <fullName>Post OC-Submitted with snags</fullName>
            </value>
            <value>
                <fullName>Post OC-Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>