dynamix/force-app/main/default/objects/Property__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <type>Url</type>
</CustomField>