dynamix/force-app/main/default/objects/Property__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <formula>Approved_Area__c +  Deck_Approved_Area__c + Utility_Area__c +Enclosed_balcony__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Total Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>