dynamix/force-app/main/default/objects/Property__c/fields/Total_Area_in_sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_in_sq_mt__c</fullName>
    <formula>Total_Area__c/10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Total Area (in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>