dynamix/force-app/main/default/objects/Property__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>