dynamix/force-app/main/default/objects/Property__c/fields/Unit_classification__c.field-meta.xml
<CustomField>
    <fullName>Unit_classification__c</fullName>
    <label>Unit classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>LUXURY</fullName>
            </value>
            <value>
                <fullName>REFUGE</fullName>
            </value>
            <value>
                <fullName>SHOP</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OFFICE</fullName>
            </value>
            <value>
                <fullName>FIRE CHECK</fullName>
            </value>
            <value>
                <fullName>SKY DECK</fullName>
            </value>
            <value>
                <fullName>ENTRANCE LOBBY</fullName>
            </value>
            <value>
                <fullName>SOCIETY OFFICE</fullName>
            </value>
            <value>
                <fullName>METER ROOM</fullName>
            </value>
            <value>
                <fullName>LOBBY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>