dynamix/force-app/main/default/objects/Property__c/fields/Unit_View__c.field-meta.xml
<CustomField>
    <fullName>Unit_View__c</fullName>
    <label>Unit View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EAST FACING</fullName>
            </value>
            <value>
                <fullName>WEST FACING</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>NORTH</fullName>
            </value>
            <value>
                <fullName>NORTH - EAST</fullName>
            </value>
            <value>
                <fullName>NORTH - WEST</fullName>
            </value>
            <value>
                <fullName>SOUTH - EAST</fullName>
            </value>
            <value>
                <fullName>SOUTH - WEST</fullName>
            </value>
            <value>
                <fullName>EAST - WEST</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>POOL</fullName>
            </value>
            <value>
                <fullName>CLUB HOUSE</fullName>
            </value>
            <value>
                <fullName>TEMPLE</fullName>
            </value>
            <value>
                <fullName>MAIN ROAD</fullName>
            </value>
            <value>
                <fullName>ROAD</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>INTERNAL ROAD</fullName>
            </value>
            <value>
                <fullName>GARDEN</fullName>
            </value>
            <value>
                <fullName>PARK</fullName>
            </value>
            <value>
                <fullName>LANDSCAP PODIUM</fullName>
            </value>
            <value>
                <fullName>RIVER / LAKE</fullName>
            </value>
            <value>
                <fullName>HILL</fullName>
            </value>
            <value>
                <fullName>GREENERY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>