dynamix/force-app/main/default/objects/Property__c/fields/Utility_Area__c.field-meta.xml
<CustomField>
    <fullName>Utility_Area__c</fullName>
    <label>Approved Utility Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>