dynamix/force-app/main/default/objects/Property__c/fields/Utility_Area_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Utility_Area_in_sqmtr__c</fullName>
    <formula>Utility_Area__c/ 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Utility Area (in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>