dynamix/force-app/main/default/objects/Property__c/fields/Wing__c.field-meta.xml
<CustomField>
    <fullName>Wing__c</fullName>
    <label>Wing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WING A</fullName>
            </value>
            <value>
                <fullName>WING B</fullName>
            </value>
            <value>
                <fullName>WING C</fullName>
            </value>
            <value>
                <fullName>WING D</fullName>
            </value>
            <value>
                <fullName>WING E</fullName>
            </value>
            <value>
                <fullName>WING F</fullName>
            </value>
            <value>
                <fullName>WING G</fullName>
            </value>
            <value>
                <fullName>WING H</fullName>
            </value>
            <value>
                <fullName>WING I</fullName>
            </value>
            <value>
                <fullName>WING J</fullName>
            </value>
            <value>
                <fullName>WING K</fullName>
            </value>
            <value>
                <fullName>WING L</fullName>
            </value>
            <value>
                <fullName>WING M</fullName>
            </value>
            <value>
                <fullName>WING N</fullName>
            </value>
            <value>
                <fullName>WING O</fullName>
            </value>
            <value>
                <fullName>WING P</fullName>
            </value>
            <value>
                <fullName>WING Q</fullName>
            </value>
            <value>
                <fullName>WING R</fullName>
            </value>
            <value>
                <fullName>WING S</fullName>
            </value>
            <value>
                <fullName>WING T</fullName>
            </value>
            <value>
                <fullName>WING U</fullName>
            </value>
            <value>
                <fullName>WING V</fullName>
            </value>
            <value>
                <fullName>WING W</fullName>
            </value>
            <value>
                <fullName>WING X</fullName>
            </value>
            <value>
                <fullName>WING Y</fullName>
            </value>
            <value>
                <fullName>WING Z</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>