dynamix/force-app/main/default/objects/Property__c/validationRules/First_Possesssion_Date_for_Custom_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Possesssion_Date_for_Custom_Status</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( ISPICKVAL(Possession_Status__c,&apos;Custom&apos;),ISBLANK(First_Possession_Date__c)),
AND( NOT(ISPICKVAL(Possession_Status__c,&apos;Custom&apos;)),(NOT(ISBLANK(First_Possession_Date__c))))
)</errorConditionFormula>
    <errorDisplayField>First_Possession_Date__c</errorDisplayField>
    <errorMessage>Please enter first possession date for custom possession status</errorMessage>
</ValidationRule>