dynamix/force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Status__c</columns>
    <columns>Property_Price_Slab__c</columns>
    <columns>Total_Area__c</columns>
    <columns>Floor__c</columns>
    <columns>Project__c</columns>
    <columns>Flat_Type__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>