dynamix/force-app/main/default/objects/Property__c/listViews/Avanya_Tower_C.listView-meta.xml
<ListView>
    <fullName>Avanya_Tower_C</fullName>
    <columns>NAME</columns>
    <columns>Property_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Avanya  Tower C</value>
    </filters>
    <label>Avanya Tower C</label>
</ListView>